# paintingrobotdemo_v2

./: packages.tutorial  readme.md  readme_futurecppalgorithm.tutorial
paintingrobot_control/: CMakeLists.txt  (+1 more)
paintingrobot_control1/: CMakeLists.txt  package.xml
paintingrobot_control1/launch/: climbingmanipulatormotion_test.launch  coverage_painting_demo_farubim2.launch  coverage_painting_test.launch
paintingrobot_control1/launch/other launch/: list_all_parameters.launch
paintingrobot_control1/launch/paintingrobot_rosdriver/: aubo_rosdriver.launch  paintingrobot_rosdriver.launch
paintingrobot_control1/scripts/paintingrobot_drivers/aubo_driver/: aubo_kienamtics.py
paintingrobot_control1/scripts/paintingrobot_drivers/plc_driver/: plc_command.py
paintingrobot_control1/scripts/paintingrobot_motion/: aubo_motion.py  coverage_painting_demo_farubim1.py  coverage_painting_demo_farubim2.py  coverage_painting_demo_farubim_backup.py  manipulator_catersian_path_tspsolver.py  onlinecoverage_painting_demo_farubim1.py  onlinepainting_climbing_and_manipulator_planner.py  painting_climbing_and_manipulator_planner.py
paintingrobot_visualization/: CMakeLists.txt  package.xml  readme.md
paintingrobot_visualization/launch/: paintingrobotmotion_simulation.launch  paintingrobotmotion_visualization.launch
paintingrobot_visualization/script/: paintingrobot_offlinepathposition_visualization.py  paintingrobotmotion_simulation.py  paintingrobotmotion_visualization.py  paintingrobotpathposition_visualization.py
paintingrobot_visualization/src/: paintingrobotscene_visualization.cpp
(+118 files in other folders)
